# King-Of-The-North

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  .npmrc  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  buf.gen.yaml  buf.yaml  commitlint.config.js  docker-compose.yml  go.mod  go.sum  lefthook.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-biometric/: Dockerfile  README.md  pyproject.toml
ai-biometric/app/: main.py
ai-biometric/tests/: test_health.py
docs/: README.md
docs/decisions/: 0001-fixed-pool-only-for-demo.md  0002-mock-moka-behind-interface.md  0003-integer-minor-units-for-money.md  0004-simulate-p2p-mesh.md  0005-replicated-ledger-for-money.md  0006-on-device-opencv-auth.md  0007-phone-scan-and-go.md  0008-depin-node-rewards.md  0009-monorepo-tooling.md  0010-no-biometric-in-p2p-storage.md  0011-account-recovery-and-device-rebinding.md  0012-offline-spending-vouchers.md  0013-reward-funding-and-unit-economics.md  0014-online-pos-ecommerce-charges.md  0015-merchant-auth-whatsapp-otp.md  0016-payment-links-3ds-style-sca.md
docs/plans/: README.md  day-zero-wallet.md  mobile-app.md  p2p-biometric.md
frontend/: AGENTS.md  Dockerfile  Dockerfile.dockerignore  README.md  package.json
gateway/: AGENTS.md  Dockerfile  README.md
mobile/: AGENTS.md  package.json
profile/: README.md
proto/: README.md  wallet.proto
wallet/: Dockerfile  README.md  docker-compose.yml
(+72 files in other folders)
